js/src/tests/test262/built-ins/Promise/reject/prop-desc.js
verifyProperty
(
Promise
'
reject
'
{
writable
:
true
enumerable
:
false
configurable
:
true
}
)
;
reportCompare
(
0
0
)
;
